# lang-examples

./: .gitignore  README.md
lang-examples-common/: docker-compose.yml  prompt_playground.py  pyproject.toml
lang-examples-common/lang_examples_common/: paths.py
lang-examples-common/lang_examples_common/utils/: display_utils.py  langfuse_utils.py  langgraph_utils.py  llm_utils.py  log_utils.py  time_utils.py
lg-tutorial-intro/: pyproject.toml  requirements.txt
lg-tutorial-intro/notebooks/: part1.ipynb
lg-tutorials/: README.md  pyproject.toml
lg-tutorials/lg_tutorials/customer_support/: database.py  utils.py
lg-tutorials/lg_tutorials/customer_support/agents/: zero_shot.py
lg-tutorials/lg_tutorials/customer_support/tools/: car_rental.py  excursions.py  flights.py  hotels.py  policies.py
lg-tutorials/notebooks/: customer-support.ipynb  quick-start.ipynb
out-of-git/example1/: prompts.py
out-of-git/example1/app/: app.py
out-of-git/notebooks/: openai.ipynb
